2014-08-19  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_serial::is_tty): Reinstantiate.

2014-08-18  Corinna Vinschen  <corinna@vinschen.de>

	* miscfuncs.cc (strlwr): Rename from cygwin_strlwr.  Drop __stdcall
	decoration.
	(strupr): Rename from cygwin_strupr.  Drop __stdcall decoration.
	* string.h (strlwr): Remove override macro.  Simply declare.
	(strupr): Ditto.

2014-08-18  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::init_std_file_from_handle): Mention that console
	handles are kernel objects since Windows 8.
	* fhandler.h (enum conn_state): Add "listener" state.
	(class fhandler_socket): Drop listener status flag.
	(fhandler_socket::lseek): Return -1 and errno ESPIPE.
	(fhandler_serial::lseek): Ditto.
	(fhandler_serial::is_tty): Remove.
	* fhandler_socket.cc (fhandler_socket::listen): Set connect_state to
	listener.  Add comment.
	(fhandler_socket::accept4): Explicitely check if the socket is listening
	and fail with EINVAL, if not.  Explain why we have to do that.
	(fhandler_socket::recv_internal): Explicitely check if the socket is
	connected if it's a stream socket.  Explain why we have to do that.
	(fhandler_socket::getpeereid): Drop now redundant test.

2014-08-15  Corinna Vinschen  <corinna@vinschen.de>

	* winsup.h (_GNU_SOURCE): Define.  Explain why.
	* configure.ac: Convert to new AC_INIT style.
	* configure: Regenerate.

2014-08-15  Corinna Vinschen  <corinna@vinschen.de>

	* cygerrno.h (seterrno): Define as (always) inline function.
	* errno.cc (seterrno): Remove.

2014-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* dll_init.sgml: Remove.
	* dtable.sgml: Move into ../doc/misc-funcs.xml.
	* external.sgml: Ditto.
	* stackdump.sgml: Ditto.

2014-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* security.sgml: Move to ../doc dir and rename to logon-funcs.xml.

2014-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* path.sgml: Move to ../doc dir and rename to path.xml.