@@ -608,10 +608,10 @@ LoadDLLfunc (LdapMapErrorToWin32, 0, wldap32)
 #pragma pop_macro ("mangle")
 
 LoadDLLfunc (WNetCloseEnum, 4, mpr)
-LoadDLLfunc (WNetEnumResourceA, 16, mpr)
-LoadDLLfunc (WNetGetProviderNameA, 12, mpr)
-LoadDLLfunc (WNetGetResourceInformationA, 16, mpr)
-LoadDLLfunc (WNetOpenEnumA, 20, mpr)
+LoadDLLfunc (WNetEnumResourceW, 16, mpr)
+LoadDLLfunc (WNetGetProviderNameW, 12, mpr)
+LoadDLLfunc (WNetGetResourceInformationW, 16, mpr)
+LoadDLLfunc (WNetOpenEnumW, 20, mpr)
 
 LoadDLLfunc (DsEnumerateDomainTrustsW, 16, netapi32)
 LoadDLLfunc (DsGetDcNameW, 24, netapi32)
